bookmarks menus intermittently reset their scrollbox position to the top
Categories
(Firefox :: Bookmarks & History, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox110 | --- | wontfix |
| firefox111 | --- | wontfix |
| firefox112 | --- | wontfix |
| firefox113 | --- | verified |
People
(Reporter: spiderman0000111, Assigned: emilio)
References
(Blocks 1 open bug, Regressed 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
Steps to reproduce:
after updating to the latest version on (1/5/22) and since that update:
bookmarks now lose track of where you left off in them if you search through them, leave them and then come back to them. this is the first time this has happened in years and it started after updating this morning. Just sharing this as probably the best feature of mozilla browsers is the ability to go through bookmarks and it not losing track of where you last left off in them. if that feature were to go away, there would be little reason for me to continue using it. could it be a temp glitch? I don't know. I only noticed this in a private session window so hopefully is resolved in next update
edit forgot to add, this is the Nightly version browser so it's updated fairly regularly. occasionally with bugs like this
Actual results:
bookmark folders on the bookmark toolbar used to save my place where I left off scrolling through them which was useful for folders with a lot of bookmarks. after that latest update and since then, this has disappeared. every time a new tab opens or i open a new bookmark, I'm now forced to re-start scrolling through the bookmark folders all over again with each new open tab. One of the #1 reasons I use Mozilla is because they were different than all the other browsers in this way for easy bookmark viewing and finding. whatever got changed is a step backwards. and if it remains permanent I'll be forced to ditch mozilla browsers.
Expected results:
essentially prior to that latest update that broke the bookmark navigation, I was able to scroll through folders of bookmarks on my bookmark toolbar, open a link or a new tab and then later return to the bookmark folder right where I left off scrolling. hugely important feature and if removed would be the last good feature and reason to continue using Mozilla browsers.
| Reporter | ||
Comment 1•3 years ago
|
||
I should add that this issue is in using Firefox Nightly. the updates on the 5th for nightly is what broke this feature and ability to continuously scroll through bookmark folders without losing my place each time I scroll through the folders.
Comment 2•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox::Bookmarks & History' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 3•3 years ago
|
||
Hello! I have tried to reproduce the issue with firefox 110.0a1(2023-01-05) on Ubuntu 22 but unfortunately I wasn't able to reproduce the issue on my end. Could you answer the following questions in order to futher investigate this issue.
- Does this issue happen with a new profile? Here is a link on how to create one: https://support.mozilla.org/en-US/kb/profile-manager-create-remove-switch-firefox-profiles
- Do you have any addons installed if so can you list them?
| Reporter | ||
Comment 4•3 years ago
|
||
I'm not going to switch profiles too much hassle. what happens is, if you have a bookmark folder on the bookmark toolbar with a lot of bookmarks in it and you are scrolling through them, click on a link and/or open a new tab, it will lose track of where you were when scrolling, unless you open the folder again before the tab/link fully opens... if you don't reopen the bookmark folder before the new link/tab finishes loading the bookmark folder forces you to start at the top and scroll through them all over again. It never did this in at least 3 years of using this browser and just started doing it after the update on the 5th. so.. doing some basic math, I didn't change anything on my end at all. it was the update and something in the update that screwed this up. that's all I know and all im going to report on it. it's unfortunate for those of us with a lot of bookmarks as if it doesn't get resolved I will eventually just stop using this browser as it was the primary reason for using it.
add to this fact that nearly every time I close this browser or it attempts to close itself for updates, 99% of the time it can't or won't do it. and pops up an annoying error message. this issue has not been fixed in 5-8 years. weird. good luck. be nice if something was improved on it instead of broken more. I'm not going to reset it again or switch profiles unless I absolutely have to as it's just such a tiresome hassle to deal with. Might as well just uninstall and reinstall everything again if that's the case which I did the last problem I had. it wastes a lot of time to do so. as for the inability to reproduce and perhaps solve nothing, this is why I hesitate to even try to report these issues. every time it seems nothing can be done or figured out so what's the point? lol
| Reporter | ||
Comment 5•3 years ago
|
||
additionally, even if a tab is already open and scrolling through a folder hasn't reset and is holding it's place, as soon as a new video or page loads, it once again resets back to the top of the bookmark folder you were scrolling through. very strange and unnecessary. it's like the entire bookmark folders resets every time a new page loads. #facepalm
Comment 6•3 years ago
|
||
Emilio, may this be related to the menuframe simplifications? From the description it sounds like we may be losing the arrowscrollbox position.
If you don't know off-hand, we'll just look for a regression range.
| Assignee | ||
Comment 7•3 years ago
|
||
Maybe? Not sure off-hand tho, so a regression range would be useful. Which platform is this on? I can't repro on Linux/X11 or Windows, but I can repro on Linux/Wayland. I took a look and we size the popup to its full height and when positioning the wayland compositor constrains us. So it is expected to lose the scroll position (in the sense that the scroller becomes huge and thus it goes to zero), and I don't know why it wouldn't happen before. Anyways can look but I want to confirm that the reporter is also on Wayland.
| Comment hidden (off-topic) |
| Reporter | ||
Comment 9•3 years ago
|
||
Windows 11 latest updates. yes. before the updates, things were working relatively good. now I can't even save images off a google search. and it won't save my place in scrolling through bookmark folders UNLESS I quickly reopen the folder to hold the spot before the new tab or page loads. that is weird. never had to do that before
| Comment hidden (off-topic) |
| Comment hidden (advocacy) |
| Assignee | ||
Comment 12•3 years ago
|
||
I can't repro that (nor the google image thing) on windows 11 either fwiw.
(In reply to spiderman0000111 from comment #10)
meaning if I search google for an image, click on the image and to the right the selected image where I was able to right click and save image the save image option is not in the context menu. this just started in today's window. only happening in the private browser window for some reason. and the private browser shortcut on my windows taskbar won't launch a private browser window anymore. it has to be launched from the primary browser window open. 🤦
Let's scope this to the bookmarks issue. It'd be great to confirm whether a new profile reproduces the issue or not tho.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 13•3 years ago
|
||
The severity field is not set for this bug.
:mak, could you have a look please?
For more information, please visit auto_nag documentation.
| Comment hidden (off-topic) |
Comment 15•3 years ago
|
||
(In reply to spiderman0000111 from comment #14)
granted this is still a bookmarks/folders placement issue, but could we please just pick one when it comes to a separate private browser session window taskbar icon or a merged one with the regular browser session icon on the taskbar?
As you have already been asked, please stop trying to report multiple issues in a single bug. Doing so will mean that they won't get tracked and they will likely not be looked at by the correct team. Also, please take a look at the bug writing guidelines before filing your next bug, having a clearer description will make it much easier for bug triagers and developers to work on your issues.
Comment 16•3 years ago
|
||
I tried to reproduce the bug on Windows 10, but I don't see it.
Could you please tell us more about your system? I can't find info about the OS you are using.
If you are willing to help us findind the problem, you could try using mozregression, the page explains the basics, in practice it will download various builds and let you reproduce the bug, you just have to mark versions are good or bad, until it reaches the change that caused the bug. Then you just have to post the generated link into Bugzilla.
Since we cannot reproduce the problem, it sounds like that'd be the better path forward here.
Comment 17•3 years ago
•
|
||
We got multiple reports of this issue on Reddit and Connect, and I can intermittently reproduce with the overflow menu on the toolbar.
What I do:
- Ensure there's many bookmarks overflowing in the toolbar
- open the overflow menu and scroll down a bit
- click on a bookmark
- repeat 2 and 3 until the position resets at a certain point when reopening the menu
Updated•3 years ago
|
| Comment hidden (metoo) |
Comment 20•3 years ago
•
|
||
I can reproduce the issue on Nightly112.0a1 Windows10.
Screencast: https://youtu.be/q1cAKojN054
STR:
- Set "Always Show" to Bookmarks toolbar
- Create a folder on the Bookmarks toolbar and create a lot of bookmarks in the folder.
- Add the following bookmark to the end of the folder
Name :Places - A complete mess that should be dropped from FF3 - MozillaZine Forums
URL:http://forums.mozillazine.org/viewtopic.php?t=625491&postdays=0&postorder=asc&postsperpage=15&start=90 - Click on the folder
- Scroll down the menupopup
- Right(Choose
Open in New Tab)/Left/Middle mouse click on the Bookmark. - Click on the folder again. And observe the scroll position
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=0c989b2bcd7882a9e7106e7879ab8933c2e09071&tochange=47c002d3637247e71ee901f32421deaecc9d8ea3
Updated•3 years ago
|
Comment 21•3 years ago
|
||
Set release status flags based on info from the regressing bug 1805414
Comment 22•3 years ago
|
||
Additional steps from bug 1817325:
- You need a bookmarks folder in the bookmarks toolbar
- there have to be so many bookmarks that you can scroll several times
- scroll down to the bottom of the list
- open a link with the scroll wheel
- while on the new tab, open the bookmarks folder again
Actual results:
- the folder is no longer at the end of the list but at the start
- if you just scroll down a little now, it jumps straight to the end of the list
Expected results:
- the folder should be at the end of the list as it was left
Emilio, please could you take another look?
| Assignee | ||
Comment 26•3 years ago
|
||
The underlying issue here is an invalidation bug with XUL layout. When a
popup opens, we try to lay it out at full size, then post a reflow
callback to constrain it.
There's an intermediate step there where the popup might remain at full
size, and the constraining operates directly on mRect, which isn't quite
sound and doesn't update the scrollport of descendants.
Make nsMenuPopupFrame inherit from nsBlockFrame instead, doing
potentially two layout passes when constrained.
This fixes the issue at hand, and removes XUL layout from menu popups,
so it's a win-win.
To make reasoning about it a bit easier, factor out a bunch of the XUL
positioning code to be const. The mutation of mRect etc which was going
on otherwise was pretty hard to reason about.
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Comment hidden (metoo) |
Updated•3 years ago
|
Comment 29•3 years ago
|
||
Related Mozilla Connect thread: Bookmark error after update to version 110.0 - Mozilla Connect
| Comment hidden (off-topic) |
| Comment hidden (off-topic) |
| Comment hidden (off-topic) |
Comment 33•3 years ago
|
||
We keep one issue per bug report, if you have a problem that cannot be resolved by support.mozilla.org, feel free to file a bug report about it, commenting in another bug report won't help resolving your problem.
| Reporter | ||
Comment 34•3 years ago
|
||
(In reply to Marco Bonardo [:mak] from comment #33)
We keep one issue per bug report, if you have a problem that cannot be resolved by support.mozilla.org, feel free to file a bug report about it, commenting in another bug report won't help resolving your problem.
that's cool. just filed another bug report. https://bugzilla.mozilla.org/show_bug.cgi?id=1818800
Updated•3 years ago
|
Updated•3 years ago
|
Comment 37•3 years ago
|
||
Comment 38•3 years ago
|
||
| bugherder | ||
Comment 39•3 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.Also, don't forget to request an uplift for the patches in the regressions caused by this fix.
- If no, please set
status-firefox112towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 40•3 years ago
|
||
Way too risky of a change for uplift IMO.
Updated•3 years ago
|
Comment 41•3 years ago
|
||
Reproduced the initial issue using an old Nightly from 2023-02-15, verified that this is now fixed using latest Nightly 114.0a1 and Firefox 113.0b8 across platforms (macOS 13, Ubuntu 22.04 and Windows 10), the scroll position remains in the place where it was left the last time.
| Assignee | ||
Comment 42•2 years ago
|
||
Otherwise they are inert (which implies pointer-events: none), but since
the popup painting escapes the usual rules it looks off.
Comment 43•2 years ago
|
||
Comment on attachment 9380691 [details]
Bug 1809084 - Make popups interactable even when a modal dialog is shown. r=Gijs
Revision D202087 was moved to bug 1880685. Setting attachment 9380691 [details] to obsolete.
Description
•